--- a/src/Nav.css
+++ b/src/Nav.css
@@ -6,9 +6,16 @@
   top: 0;
   right: 0;
   background-color: #ffffff;
+  font-family: 'PT Serif', serif;
+  font-size: 24px;
+  text-align: left;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .Nav ul {
+  padding: 0;
   list-style-type: none;
 }
 
@@ -18,6 +25,34 @@
 }
 
 .Nav a {
+  position: relative;
   text-decoration: none;
   color: black;
+}
+
+.Nav-contents {
+  align-self: center;
+  margin-bottom: 30%;
+}
+
+.Nav-logo {
+  margin-top: 30%;
+  height: 80px;
+}
+
+.Nav a:after {    
+  background: none repeat scroll 0 0 transparent;
+  content: "";
+  display: block;
+  height: 3px;
+  left: 50%;
+  position: absolute;
+  background: #AE2C2D;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  width: 0;
+}
+
+.Nav a:hover:after {
+  width: 100%;
+  left: 0; 
 }
