--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .App {
-  text-align: center;
+  margin: 0;
 }
 
+/*
 .App-logo {
   height: 40vmin;
 }
@@ -19,4 +20,4 @@
 
 .App-link {
   color: #09d3ac;
-}
+}*/
