--- a/src/layout/Services.css
+++ b/src/layout/Services.css
@@ -1,7 +1,7 @@
 .Services {
 	font-family: 'PT Sans', sans-serif;
 	font-size: 20px;
-	padding: 5%;
+	/*padding: 5%;*/
 }
 
 .Services-title {
@@ -42,6 +42,7 @@
   font-family: 'PT Sans', sans-serif;
   margin-right: 20px;
   margin-top: 10px;
+  color: black;
 }
 
 .Services-buttongroup button:hover, .Services-buttongroup button:focus {
@@ -67,6 +68,20 @@
   margin-top: 20px;
 }
 
+.Services-actionbutton2 {
+	background-color: #810606;
+	border: 1px solid #810606;
+	color: white;
+	border-radius: 12px;
+  padding: 14px 30px;
+  text-align: center;
+  display: inline-block;
+  font-size: 18px;
+  font-family: 'PT Sans', sans-serif;
+  margin-right: 20px;
+  margin-top: 60px;
+}
+
 button:hover {
 	cursor: pointer;
 }
@@ -84,7 +99,7 @@ button:hover {
 }
 
 .Services-solution {
-	border: 1px solid black;
+	border: 1px solid #d3d3d3;
 	border-radius: 12px;
 	padding: 20px;
 	margin-right: 20px;
@@ -96,4 +111,10 @@ button:hover {
 	font-family: 'PT Serif', serif;
 	font-size: 24px;
 	font-weight: 700;
+}
+
+.active {
+	background-color: #810606;
+  color: white;
+  border: 1px solid #810606;
 }
