added animations to blocktexts, changed home page, added solutions to services page

--- a/src/layout/BlockTexts.css
+++ b/src/layout/BlockTexts.css
@@ -19,4 +19,11 @@
   margin-left: 5%;
   margin-top: 16px;
   width: 90%;
+  transition: 0.5s;
+}
+
+.BlockTexts__block:hover {
+  -webkit-transform: scale(1.02);
+  -ms-transform: scale(1.02);
+  transform: scale(1.02);
 }
