--- a/src/layout/Nav.css
+++ b/src/layout/Nav.css
@@ -38,6 +38,13 @@
 .Nav-logo {
     margin-top: 30%;
     height: 80px;
+    transition: 0.3s;
+}
+
+.Nav-logo:hover {
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
 }
   
 .Nav li a:after {    
