--- a/src/layout/Home.css
+++ b/src/layout/Home.css
@@ -6,15 +6,17 @@
 }
 
 .Home-title {
-	font-family: 'PT Serif', serif;
-	font-size: 140px;
-	color: #810606;
+	position: absolute;
 	margin: 5%;
+	opacity: 0;
+  	transition: 2s;
+  	z-index: 5;
 }
 
 .Home-visual {
 	position: relative;
-	bottom: 140px;
+	/*bottom: 140px;*/
+	top: 178px;
 }
 
 .Home-video-overlay {
@@ -30,4 +32,10 @@
 	bottom: 20px;
 	margin-left: 5%;
 	color: white;
+	opacity: 0;
+  	transition: 2s;
+}
+
+.fade-in {
+	opacity: 1;
 }
