--- a/src/layout/SingleBlockText.css
+++ b/src/layout/SingleBlockText.css
@@ -7,6 +7,16 @@
   padding: 16px;
 }
 
+.SingleBlockText__container {
+  display: flex;
+  flex-direction: row;
+
+}
+
+.SingleBlockText__image {
+  width: 30%;
+}
+
 .SingleBlockText__header {
   font-family: 'PT Serif', serif;
   font-style: normal;
@@ -23,4 +33,8 @@
   line-height: 150%;
   color: #000000;
   margin-top: 10px;
+}
+
+.SingleBlockText__body-mr {
+  margin-right: 10px;
 }
