--- a/src/layout/Home.css
+++ b/src/layout/Home.css
@@ -22,8 +22,8 @@
 .Home-video-overlay {
 	width: 75vw;
 	height: 65vh;
-	background-color: black;
-	opacity: 0.7;
+	/* background-color: black; */
+	/* opacity: 0.7; */
 }
 
 .Home-info {
